[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/meta/background.png" type="Texture" id=1]
[ext_resource path="res://assets/meta/title.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/backarrow.png" type="Texture" id=3]
[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Jost-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Jost-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Jost-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/Jost-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/Jost-Light.ttf"

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="CanvasLayer"]
margin_left = 1232.0
margin_top = 696.0
margin_right = 1282.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="CanvasLayer"]
margin_left = 144.0
margin_top = 40.0
margin_right = 651.0
margin_bottom = 256.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Control" parent="CanvasLayer"]
margin_left = 176.0
margin_top = 288.0
margin_right = 511.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input_IP" type="TextEdit" parent="CanvasLayer/Play"]
anchor_top = 0.212
anchor_right = 0.764
anchor_bottom = 0.333
margin_top = 0.0319977
margin_right = 0.0599823
margin_bottom = 0.0879974
rect_pivot_offset = Vector2( -32, 24 )
custom_fonts/font = SubResource( 2 )
text = "localhost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Play"]
anchor_top = 0.121
anchor_right = 0.188
anchor_bottom = 0.201
margin_top = 0.0559978
margin_right = 0.0199966
margin_bottom = -0.064003
rect_pivot_offset = Vector2( -32, 48 )
custom_fonts/font = SubResource( 4 )
text = "IP Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input_Port" type="TextEdit" parent="CanvasLayer/Play"]
anchor_left = 0.812
anchor_top = 0.212
anchor_right = 0.979
anchor_bottom = 0.333
margin_left = -0.0200195
margin_top = 0.0319977
margin_right = 0.0350037
margin_bottom = 0.0879974
rect_pivot_offset = Vector2( -32, 24 )
custom_fonts/font = SubResource( 2 )
text = "8080"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Play"]
anchor_left = 0.812
anchor_top = 0.121
anchor_right = 1.0
anchor_bottom = 0.201
margin_left = -0.0200195
margin_top = 0.0559978
margin_bottom = -0.064003
rect_pivot_offset = Vector2( -32, 48 )
custom_fonts/font = SubResource( 4 )
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="CanvasLayer/Play"]
anchor_top = 0.727
anchor_right = 0.215
anchor_bottom = 0.841
margin_top = 0.071991
margin_right = -0.0250015
margin_bottom = -0.0240021
custom_fonts/font = SubResource( 5 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="CanvasLayer/Play"]
anchor_top = 0.848
anchor_right = 0.764
anchor_bottom = 1.0
margin_top = 0.127991
margin_right = 0.0599823
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.811765, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CanvasLayer/Play"]
anchor_right = 0.188
anchor_bottom = 0.076
margin_right = 1.02
margin_bottom = 9.936
custom_fonts/font = SubResource( 7 )
text = "Back"
icon = ExtResource( 3 )
flat = true

[node name="FadeIn" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Play/Connect" to="." method="_on_Connect_pressed"]
